# LLM-Tucker-riemannian-compress

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_imports.py
.dvc/: .gitignore  config
compress/: __init__.py  sparse.py
compress/backend/: __init__.py  pytorch_backend.py
compress/tucker_decomposition/: matrix.py  tucker.py  tucker_manifold.py
compression_tests/: backend_test.py
compression_tests/sparse_test/: sparse_tensor_test.py  sparse_tucker_test.py
compression_tests/tucker_tests/: matrix_test.py  tucker_manifold_test.py  tucker_test.py
model_checkpoints/: .gitignore  last-v1.ckpt.dvc  last.ckpt.dvc
model_compression/: __init__.py  rieman_model.py  tucker_layer.py
model_compression/rieman_optimizer/: tucker_optim.py
model_training/: data_class.py  model_class.py  train.py
model_training/configs/: config.yaml
model_training/configs/callbacks/: default_callbacks.yaml
model_training/configs/onnx/: onnx.yaml
model_training/configs/optimizer/: adam.yaml
model_training/configs/scheduler/: exponential.yaml
model_training/onnx_utils/: __init__.py  convert_and_export.py  export_to_onnx.py
model_training/utils/: data_class.py  mlflow_server.py  model_class.py  utils.py
onnx-model/: .gitignore  tucker_model.onnx.dvc
src/compress/: __init__.py  sparse.py
src/compress/backend/: __init__.py  backend.py
src/compress/tucker_decomposition/: matrix.py  tucker_manifold.py
src/model_compression/: __init__.py  rieman_model.py  tucker_layer.py
src/model_compression/rieman_optimizer/: tucker_optim.py
src/model_training/: inference.py  train.py
src/model_training/onnx_utils/: export_to_onnx.py
src/model_training/utils/: model_class.py  utils.py
src/training_and_inference/: inference.py  train.py
src/training_and_inference/configs/: config.yaml
src/training_and_inference/onnx_utils/: convert_and_export.py  export_to_onnx.py
src/training_and_inference/tensort_utils/: convert_to_tensorrt.py
tensort-engine/: .gitignore  tucker_model.plan.dvc
texts/: prediction.txt  review.txt
(+6 files in other folders)
