[project]
name = "compress-and-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "numpy==1.21.4",
    "opt-einsum==3.3.0",
    "scipy==1.8.0",
    "torch==2.0.0",
]

[dependency-groups]
dev = [
    "fire>=0.7.0",
    "ipykernel>=6.29.5",
]
