[project]
name = "compress-and-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "datasets==2.16.1",
    "numpy==1.21.4",
    "opt-einsum==3.3.0",
    "pytorch-lightning>=2.3.3",
    "scipy==1.8.0",
    "torch==2.0.0",
    "transformers==4.37.1",
]

[dependency-groups]
dev = [
    "fire>=0.7.0",
    "ipykernel>=6.29.5",
    "pytest>=8.4.0",
    "rich>=14.0.0",
    "wandb>=0.20.1",
]
